# ai-rfq-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/manual_sql/: 001_create_pricebook_tables.sql
docs/: architecture.md  data_dictionary.md  deployment.md  evaluation.md  project_backlog.md  security.md  sql_command_reference.md  sql_ddl_review_checklist.md  sql_execution_environment.md  sql_schema_draft.md
docs/adr/: 0001-use-sql-server-as-source-of-truth.md  0002-use-langgraph-for-controlled-workflow.md  0003-use-qdrant-for-semantic-retrieval-only.md  0004-use-mlflow-for-tracking.md
scripts/: build_item_quality_report.py  build_item_records_preview.py  load_pricebook_to_sql.py  preview_data_sheet.py  profile_workbook.py  review_sql_ddl.py  search_assembly_number.py  search_exact_part.py  validate_sql_post_load.py
src/rfq_agent/db/: pricebook_sql_loader.py  sql_connection.py  sql_post_load_validation.py  sql_static_review.py
src/rfq_agent/ingestion/: data_sheet_parser.py  item_quality_report.py  item_record_builder.py  workbook_reader.py
src/rfq_agent/retrieval/: assembly_search.py  exact_search.py
tests/unit/: test_assembly_search.py  test_exact_search.py  test_governance_rules.py  test_item_record_builder.py  test_pricebook_sql_loader.py  test_project_structure.py  test_sql_post_load_validation.py  test_sql_static_review.py
